# livepeer-emissions-risk

./: .gitignore  .gitmodules  Data2023-2024[perRound].csv  ForecastTool_November[RoundBasis].py  README.md  objectives.md
.github/workflows/: claude-pr-review.yml  claude.yml
python/: ForecastTool_November[RoundBasis].py  ForecastTool_RoundBasis.py  README.md  TIME_CONVERSION_README.md  pyproject.toml  survey-data.py  test_time.py
python/__marimo__/session/: ForecastTool_RoundBasis.py.json
python/examples/: time_conversion_examples.py
python/notebook/: Data Fetching.ipynb  ForecastTool.py  ForecastTool_November.py  ForecastTool_RoundBasis.py  README.md  admissible-tunings.py  emissions-history.py
python/notebook/__marimo__/session/: ForecastTool_RoundBasis.py.json
python/script/: data-fetching.py  fetch-data.py
python/src/lpt_stake/: __init__.py  time.py
risk/: glossary.md
survey/: livepeer-survey-results-notes.md  livepeer-survey-results.md
